deploy/openshift/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: crm-dev
  labels:
    app.kubernetes.io/name: crm
    app.kubernetes.io/env: dev
---
apiVersion: v1
kind: Namespace
metadata:
  name: crm-staging
  labels:
    app.kubernetes.io/name: crm
    app.kubernetes.io/env: staging
---
apiVersion: v1
kind: Namespace
metadata:
  name: crm-prod
  labels:
    app.kubernetes.io/name: crm
    app.kubernetes.io/env: production
